# HC-Encyclopedia

./: .gitignore  README.md  items_page1.html  pyproject.toml
assets/cache/html/: page_001.html  page_002.html  page_003.html  page_004.html  page_005.html  page_006.html  page_007.html  page_008.html  page_009.html  page_010.html  page_011.html  page_012.html  page_013.html  page_014.html  page_015.html  page_016.html  page_017.html  page_018.html  page_019.html  page_020.html  page_021.html  page_022.html  page_023.html  page_024.html  page_025.html  page_026.html  page_027.html  page_028.html  page_029.html  page_030.html  page_031.html  page_032.html  page_033.html  page_034.html  page_035.html  page_036.html  page_037.html  page_038.html  page_039.html  page_040.html  (+117 more)
assets/cache/items/: A1.html  A10.html  A100.html  A101.html  A102.html  A103.html  A104.html  A105.html  A106.html  A107.html  A108.html  A109.html  A11.html  A110.html  A111.html  A112.html  A113.html  A114.html  A115.html  A116.html  A117.html  A118.html  A119.html  A12.html  A120.html  A121.html  A122.html  A123.html  A124.html  A125.html  A126.html  A127.html  A128.html  A129.html  A13.html  A130.html  A131.html  A132.html  A133.html  A134.html  (+2307 more)
database/migrations/: 0015_sets_substances.sql  0018_set_materials.sql  001_init.sql  0020_set_material_images.sql  0023_set_recommended_items.sql  0024_set_recommended_items_table.sql  0025_recommended_item_images.sql  0026_recommended_items_image_local.sql  0027_items.sql  002_item_details.sql  003_add_gear_id.sql
src/hcenc/: __main__.py  config.py
(+93 files in other folders)
